# multilevel_bspline

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/Modules/: FindEmbree.cmake  FindOpenMesh.cmake
data/dice/: dice.disp  dice.disp_info  dice.nor  dice.tri  dice.uv  dice.vert  dice_scaled.nor  dice_scaled.tri  dice_scaled.uv  dice_scaled.vert
scripts/: 01-mba_berto.bat  01-mba_rj.bat  02-cdm_berto.bat  02-cdm_rj.bat  03-blending_cdm_berto.bat  03-blending_cdm_rj.bat  04-smooth_rj.bat  05-blending_lap_rj.bat  06-obj_diff_blend.bat  06-obj_diff_blend_rj.bat  07-obj_append.bat  blending_cdm.bat  blending_cdm.sh  blending_lap.bat  cdm.bat  cdm.sh  mba.bat  mba.sh  mba_berto.bat  obj_diff.bat  obj_diff_blend.bat  obj_diff_blend_log.txt  smooth.bat  smooth_figs.bat  smooth_tadeu.bat
src/app/: CMakeLists.txt  bezier_app.cpp  blending_details_cdm.cpp  blending_details_lap.cpp  bspline_mesh.h  bspline_mesh_app.cpp  bspline_mesh_bezier_app.cpp  bspline_mesh_surfxyz_app.cpp  bspline_mesh_xyz_app.cpp  bspline_surface_app.cpp  cdm.cpp  face_blending.cpp  face_blending_project.h  mba_mesh_app.cpp  mba_mesh_z_app.cpp  mba_surface_app.cpp  mesh_cut.cpp  mesh_normalize.cpp  obj_diff.cpp  obj_displacement_write.cpp  obj_extract_group.cpp  obj_polyfit.cpp  obj_remove_group.cpp  obj_split_file.cpp  obj_split_file_poly.cpp  obj_triangulate.cpp  obj_uv_flip.cpp  obj_validate.cpp  obj_vertex_extract.cpp  polifit.cpp  poly_fit.h  polyfit.cpp  quad_to_tri.cpp  smooth.cpp  vert_displacement_write.cpp  vert_polyfit.cpp
src/lib/: CMakeLists.txt
src/lib/bezier/: bezier.h
src/lib/bspline_surface/: bspline_surface.h  matrix.h  mba_surface.h
src/lib/common/: cmdline.h  timer.h  vector_read_write_binary.h
src/lib/mesh_utils/: mesh_utils.h
src/lib/nanoflann/: nanoflann.hpp  nanoflann_pointcloud.hpp
src/lib/raytracing/: geometry.h  raytri.h
src/lib/stb_image/: stb_image.h
src/lib/tinyobj/: tiny_obj_loader.h  tinyobj.h
src/lib/tinyply/: tinyply.cpp  tinyply.h
